# OS-droid-mouse

AirMouseClient/AirMouse/app/src/main/java/iu7/kurs/pacman29/mouse/: ConnectedServerManager.java  HashMapAdapter.java  NavigationItem.java  NavigationItemListener.java  Server.java  ServerSettings.java  ServersFragment.java
AirMouseClient/AirMouse/app/src/main/res/layout/: content_air_mouse.xml  fragment_touch_pad.xml
AirMouseClient/AirMouse/app/src/main/res/menu/: air_mouse.xml
AirMouseServer/: CMakeLists.txt  MessageFactory.h  README.md  VirtualInput.cpp  VirtualInput.h
MouseClient/: MainDiagram.suml  UMl.suml
MouseClient/AirMouse/app/: build.gradle
MouseClient/AirMouse/app/src/main/: AndroidManifest.xml
MouseClient/AirMouse/app/src/main/res/layout/: app_bar_air_mouse.xml  content_air_mouse.xml  fragment_air_remote.xml  fragment_servers.xml  fragment_touch_pad.xml
MouseClient/AirMouse/app/src/main/res/menu/: activity_air_mouse_drawer.xml
MouseClient/AirMouse/app/src/main/res/values/: strings.xml
MouseClient/AirMouse/gradle/wrapper/: gradle-wrapper.properties
MouseDriver/: .avms.ko.cmd  .avms.mod.o.cmd  .avms.o.cmd  Makefile  avms.c  avms.ko  avms.mod.c  modules.order
MouseDriver/.tmp_versions/: avms.mod
MouseServer/: ByteBuffer.h  CMakeLists.txt  DiscoveryServer.cpp  DiscoveryServer.h  KeepAliveMessage.h  Message.cpp  Message.h  MessageFactory.h  MouseClickMessage.h  MouseMoveMessage.h  MouseScrollMessage.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  VirtualInput.cpp  VirtualInput.h  main.cpp
(+40 files in other folders)
